--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0094.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0094.html
@@ -132,9 +132,9 @@
             <ins title="nlp 2.00">Σωκράτης</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 2146 271 2208 307">
+        <span id="w_24_0" class="ocr_word" title="bbox 2146 271 2208 307">
           <span class="alternatives">
-            <ins title="nlp 2.00">63ν</ins>
+            <ins class="alt" title="nlp 2.00">63v</ins>
           </span>
         </span>
       </span>
@@ -855,7 +855,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 1898 1443 1954 1496" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins title="nlp 2.00">(οἱ</ins>
           </span>
         </span>
         <span id="w_164" class="ocr_word" title="bbox 1977 1459 2046 1497" lang="grc">
@@ -1550,7 +1550,7 @@
         </span>
         <span id="w_295" class="ocr_word" title="bbox 673 2576 715 2610" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 γὰρ</ins>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 811 2588 877 2612">
