--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0029.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0029.html
@@ -766,8 +766,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 277 936 506 990">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Philopoiii</ins>
-            <del title="nlp 0.90">Philopoiii</del>
+            <ins title="nlp 2.00">Philoponi</ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 530 935 882 977">
@@ -816,13 +815,17 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 430 1004 650 1058">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Simjjlicii,</ins>
-            <del title="nlp 0.90">Simjjlicii,</del>
+            <ins title="nlp 2.00">Simplicii,</ins>
           </span>
         </span>
-        <span id="w_153" class="ocr_word" title="bbox 689 1004 918 1059">
+        <span id="w_153_0" class="ocr_word" title="bbox 689 1004 918 1059">
           <span class="alternatives">
-            <ins title="nlp 2.00">1),</ins>
+            <ins class="alt" title="nlp 2.00">Davidis1),</ins>
+          </span>
+        </span>
+        <span id="w_153_1" class="ocr_word" title="bbox 689 1004 918 1059">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_154" class="ocr_word" title="bbox 969 1005 1156 1046">
@@ -843,19 +846,8 @@
             <del title="nlp 0.90">Byzautiui</del>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1736 1009 1986 1065">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">interpreta-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 166 1073 1984 1130">
-        <span id="w_158" class="ocr_word" title="bbox 166 1074 300 1115">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tioiies</ins>
-            <del title="nlp 0.90">interpretatioiies</del>
-          </span>
-        </span>
         <span id="w_159" class="ocr_word" title="bbox 332 1074 459 1115">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">etiam</ins>
@@ -900,16 +892,14 @@
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1730 1079 1984 1125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sclioliastes</ins>
-            <del title="nlp 0.90">sclioliastes</del>
+            <ins title="nlp 2.00">scholiastes</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 165 1142 1983 1199">
         <span id="w_167" class="ocr_word" title="bbox 165 1143 318 1184">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niiseia</ins>
-            <del title="nlp 0.90">niiseia</del>
+            <ins title="nlp 2.00">misera</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 349 1142 525 1184">
@@ -1177,7 +1167,7 @@
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1838 1439 1975 1468">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exem-</ins>
+            <ins title="nlp 2.00">exemplari</ins>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 2016 1425 2047 1467">
@@ -1188,12 +1178,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 163 1487 1981 1542">
-        <span id="w_213" class="ocr_word" title="bbox 163 1488 269 1542">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">plari</ins>
-            <del title="nlp 0.90">plari</del>
-          </span>
-        </span>
         <span id="w_214" class="ocr_word" title="bbox 302 1487 518 1530">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">derivatus</ins>
@@ -1249,17 +1233,11 @@
         </span>
         <span id="w_223" class="ocr_word" title="bbox 1827 1495 1981 1537">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">descri-</ins>
+            <ins title="nlp 2.00">describendis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 163 1556 1976 1617">
-        <span id="w_224" class="ocr_word" title="bbox 163 1557 309 1598">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">beudis</ins>
-            <del title="nlp 0.90">describeudis</del>
-          </span>
-        </span>
         <span id="w_225" class="ocr_word" title="bbox 356 1556 515 1597">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">librarii</ins>
@@ -2060,7 +2038,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 636 2194 696 2238" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὴ</ins>
+            <ins title="nlp 2.00">(μὴ</ins>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 720 2192 818 2230" lang="grc">
@@ -2139,8 +2117,7 @@
         </span>
         <span id="w_383" class="ocr_word" title="bbox 307 2252 322 2298">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 352 2252 422 2297" lang="grc">
@@ -2160,7 +2137,7 @@
         </span>
         <span id="w_387" class="ocr_word" title="bbox 607 2253 648 2285" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">18 τίθ.</ins>
+            <ins title="nlp 2.00">τίθ.</ins>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 751 2253 795 2289" lang="grc">
@@ -2344,8 +2321,7 @@
         </span>
         <span id="w_421" class="ocr_word" title="bbox 235 2368 249 2415">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_422" class="ocr_word" title="bbox 281 2370 382 2405" lang="grc">
@@ -2556,8 +2532,7 @@
         </span>
         <span id="w_462" class="ocr_word" title="bbox 322 2487 340 2532">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_463" class="ocr_word" title="bbox 370 2487 410 2521">
@@ -2587,7 +2562,7 @@
         </span>
         <span id="w_468" class="ocr_word" title="bbox 875 2488 917 2522" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">29 pr. κατὰ</ins>
+            <ins title="nlp 2.00">κατὰ</ins>
           </span>
         </span>
         <span id="w_469" class="ocr_word" title="bbox 1121 2500 1186 2522">
@@ -2883,7 +2858,7 @@
         </span>
         <span id="w_524" class="ocr_word" title="bbox 1038 2664 1218 2710" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁμώνυμα</ins>
+            <ins title="nlp 2.00">(ὁμώνυμα</ins>
           </span>
         </span>
         <span id="w_525" class="ocr_word" title="bbox 1238 2667 1276 2708">
