--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0095.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0095.html
@@ -1010,9 +1010,9 @@
             <ins class="alt" title="nlp 1.00">ἀρχὴ</ins>
           </span>
         </span>
-        <span id="w_195" class="ocr_word" title="bbox 1884 1386 1950 1422">
+        <span id="w_195_0" class="ocr_word" title="bbox 1884 1386 1950 1422">
           <span class="alternatives">
-            <ins title="nlp 2.00">64ν</ins>
+            <ins class="alt" title="nlp 2.00">64v</ins>
           </span>
         </span>
       </span>
@@ -2021,7 +2021,7 @@
         </span>
         <span id="w_388" class="ocr_word" title="bbox 1709 2738 1783 2784">
           <span class="alternatives">
-            <ins title="nlp 2.00">pr. ή</ins>
+            <ins title="nlp 2.00">ή</ins>
           </span>
         </span>
         <span id="w_389" class="ocr_word" title="bbox 1803 2748 1870 2772">
@@ -2057,7 +2057,7 @@
         </span>
         <span id="w_394" class="ocr_word" title="bbox 517 2812 574 2844">
           <span class="alternatives">
-            <ins title="nlp 2.00">9 καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_395" class="ocr_word" title="bbox 598 2808 664 2844">
