--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0219.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0219.html
@@ -415,9 +415,14 @@
             <ins title="nlp 2.00">Πλωτῖνος</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 390 637 496 691" lang="grc">
+        <span id="w_77_0" class="ocr_word" title="bbox 390 637 496 691">
           <span class="alternatives">
-            <ins title="nlp 2.00">(περὶ</ins>
+            <ins class="alt" title="nlp 2.00">(περὶ</ins>
+          </span>
+        </span>
+        <span id="w_77_1" class="ocr_word" title="bbox 390 637 496 691">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 527 654 599 693" lang="grc">
@@ -463,11 +468,6 @@
         <span id="w_86" class="ocr_word" title="bbox 1492 661 1741 698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑποκείμενον</ins>
-          </span>
-        </span>
-        <span id="w_87" class="ocr_word" title="bbox 1775 661 1838 685" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νῦν</ins>
           </span>
         </span>
       </span>
@@ -817,14 +817,14 @@
             <ins class="alt" title="nlp 1.00">ἀντιθέσει</ins>
           </span>
         </span>
-        <span id="w_155" class="ocr_word" title="bbox 1441 1054 1550 1111" lang="grc">
+        <span id="w_155_0" class="ocr_word" title="bbox 1441 1054 1550 1111">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἄρα&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἄρα&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 1583 1073 1837 1113" lang="grc">
+        <span id="w_155_1" class="ocr_word" title="bbox 1441 1054 1550 1111">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντιστροφήν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -869,9 +869,14 @@
             <ins class="alt" title="nlp 1.00">ὑποκειμένῳ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1320 1122 1411 1177" lang="grc">
+        <span id="w_165_0" class="ocr_word" title="bbox 1320 1122 1411 1177">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὅ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ὃσα</ins>
+          </span>
+        </span>
+        <span id="w_165_1" class="ocr_word" title="bbox 1320 1122 1411 1177">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1445 1142 1497 1179" lang="grc">
@@ -882,11 +887,6 @@
         <span id="w_167" class="ocr_word" title="bbox 1532 1142 1569 1166" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
-          </span>
-        </span>
-        <span id="w_168" class="ocr_word" title="bbox 1593 1143 1836 1182" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποκειμένῳ</ins>
           </span>
         </span>
       </span>
@@ -973,9 +973,14 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 549 1257 828 1312" lang="grc">
+        <span id="w_185_0" class="ocr_word" title="bbox 549 1257 828 1312">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑποκειμένῳ&amp;#x003Ε;·</ins>
+            <ins class="alt" title="nlp 2.00">ὑποκειμένῳ&amp;#x003E;.</ins>
+          </span>
+        </span>
+        <span id="w_185_1" class="ocr_word" title="bbox 549 1257 828 1312">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 869 1261 1005 1299" lang="grc">
@@ -1006,11 +1011,6 @@
         <span id="w_191" class="ocr_word" title="bbox 1518 1263 1683 1304" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐναντίον</ins>
-          </span>
-        </span>
-        <span id="w_192" class="ocr_word" title="bbox 1718 1281 1839 1318" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μαχόμενον.</ins>
           </span>
         </span>
       </span>
