--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0122.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0122.html
@@ -68,9 +68,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1159 341 2195 400">
-        <span id="w_10" class="ocr_word" title="bbox 1159 343 1319 400" lang="grc">
+        <span id="w_10_0" class="ocr_word" title="bbox 1159 343 1319 400">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις λ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 1159 343 1319 400">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λ'&amp;003E;.</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 2130 344 2195 380">
@@ -2039,12 +2044,12 @@
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1535 2696 1578 2729" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 αὐτῷ V </ins>
+            <ins title="nlp 2.00">αὐτῷ V </ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 1948 2697 1958 2728" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">11 εὐλύτως]</ins>
+            <ins title="nlp 2.00">εὐλύτως]</ins>
           </span>
         </span>
       </span>
@@ -2475,14 +2480,24 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_472" class="ocr_word" title="bbox 1523 3056 1678 3103" lang="grc">
+        <span id="w_472_0" class="ocr_word" title="bbox 1523 3056 1678 3103">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφοραὶ</ins>
+            <ins class="alt" title="nlp 2.00">διαφοραὶ</ins>
           </span>
         </span>
-        <span id="w_475" class="ocr_word" title="bbox 1874 3057 2010 3099">
+        <span id="w_472_1" class="ocr_word" title="bbox 1523 3056 1678 3103">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐν τοῖς εἴδεσι&amp;#x003Ε;?</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἐν</ins>
+          </span>
+        </span>
+        <span id="w_475_0" class="ocr_word" title="bbox 1874 3057 2010 3099">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τοῖς</ins>
+          </span>
+        </span>
+        <span id="w_475_1" class="ocr_word" title="bbox 1874 3057 2010 3099">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἴδεσι&amp;x003E;?</ins>
           </span>
         </span>
       </span>
@@ -2534,9 +2549,14 @@
             <ins title="nlp 2.00">V1</ins>
           </span>
         </span>
-        <span id="w_485" class="ocr_word" title="bbox 1625 3118 1656 3156" lang="grc">
+        <span id="w_485_0" class="ocr_word" title="bbox 1625 3118 1656 3156">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὑ</ins>
+            <ins class="alt" title="nlp 2.00">(ὑ</ins>
+          </span>
+        </span>
+        <span id="w_485_1" class="ocr_word" title="bbox 1625 3118 1656 3156">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_486" class="ocr_word" title="bbox 1676 3117 1860 3160">
@@ -2547,11 +2567,6 @@
         <span id="w_487" class="ocr_word" title="bbox 2006 3116 2047 3149">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">27</ins>
-          </span>
-        </span>
-        <span id="w_488" class="ocr_word" title="bbox 2075 3123 2168 3161">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προσλάβομεν</ins>
           </span>
         </span>
       </span>
