--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0096.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0096.html
@@ -243,9 +243,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1130 555 1392 613">
-        <span id="w_44" class="ocr_word" title="bbox 1130 556 1288 611" lang="grc">
+        <span id="w_44_0" class="ocr_word" title="bbox 1130 556 1288 611">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;Πρᾶξις χ'&amp;003E; .</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_44_1" class="ocr_word" title="bbox 1130 556 1288 611">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κ΄&amp;#x003Ε;.</ins>
           </span>
         </span>
       </span>
@@ -399,8 +404,7 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 616 902 621 956">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 649 902 711 943" lang="grc">
@@ -1186,7 +1190,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 851 1797 938 1850" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins title="nlp 2.00">(τοῦ</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 969 1813 1040 1851" lang="grc">
@@ -1650,7 +1654,7 @@
         </span>
         <span id="w_320" class="ocr_word" title="bbox 2094 2293 2159 2329">
           <span class="alternatives">
-            <ins title="nlp 2.00">65ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
