--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0220.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0220.html
@@ -552,7 +552,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 2053 765 2141 801">
           <span class="alternatives">
-            <ins title="nlp 2.00">254ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -2031,7 +2031,7 @@
         </span>
         <span id="w_392" class="ocr_word" title="bbox 691 2807 710 2840" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">3 οὐκὲ]</ins>
+            <ins title="nlp 2.00">οὐκὲ]</ins>
           </span>
         </span>
         <span id="w_393" class="ocr_word" title="bbox 1088 2810 1109 2841">
