--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0096.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0096.html
@@ -245,12 +245,12 @@
       <span class="ocr_line" title="bbox 1130 555 1392 613">
         <span id="w_44_0" class="ocr_word" title="bbox 1130 556 1288 611">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
+            <ins class="alt" title="nlp 2.00">Πρᾶξις</ins>
           </span>
         </span>
         <span id="w_44_1" class="ocr_word" title="bbox 1130 556 1288 611">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">κ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">Ε;.</ins>
           </span>
         </span>
       </span>
@@ -1190,7 +1190,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 851 1797 938 1850" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῦ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 969 1813 1040 1851" lang="grc">
