--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0168.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0168.html
@@ -977,7 +977,7 @@
         </span>
         <span lang="grc" title="bbox 1519 1423 1560 1478" class="ocr_word" id="w_188">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἢ</ins>
+            <ins title="nlp 2.00">[ἢ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1609 1425 1673 1464" class="ocr_word" id="w_189">
@@ -2033,7 +2033,7 @@
         </span>
         <span lang="grc" title="bbox 1858 2617 2024 2662" class="ocr_word" id="w_389">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">πέμπτος</ins>
+            <ins title="nlp 2.00">(πέμπτος</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 2049 2616 2066 2650" class="ocr_word" id="w_390">
