--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0097.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0097.html
@@ -1171,7 +1171,7 @@
         </span>
         <span id="w_227" class="ocr_word" title="bbox 448 1495 653 1550" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συγγενὴς</ins>
+            <ins title="nlp 2.00">(συγγενὴς</ins>
           </span>
         </span>
         <span id="w_228" class="ocr_word" title="bbox 683 1496 755 1551" lang="grc">
@@ -1640,9 +1640,14 @@
             <ins class="alt" title="nlp 1.00">μερικῶν</ins>
           </span>
         </span>
-        <span id="w_318" class="ocr_word" title="bbox 600 2046 699 2102">
+        <span id="w_318_0" class="ocr_word" title="bbox 600 2046 699 2102">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;καὶ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_318_1" class="ocr_word" title="bbox 600 2046 699 2102">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_319" class="ocr_word" title="bbox 730 2048 909 2102" lang="grc">
@@ -1678,11 +1683,6 @@
         <span id="w_325" class="ocr_word" title="bbox 1694 2064 1718 2101" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_326" class="ocr_word" title="bbox 1742 2062 1835 2101" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">παροῦσα</ins>
           </span>
         </span>
       </span>
@@ -1880,7 +1880,7 @@
         </span>
         <span id="w_365" class="ocr_word" title="bbox 628 2325 767 2377" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_366" class="ocr_word" title="bbox 796 2341 868 2380" lang="grc">
@@ -1987,7 +1987,7 @@
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1831 2401 1895 2437">
           <span class="alternatives">
-            <ins title="nlp 2.00">66ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -2004,7 +2004,7 @@
         </span>
         <span id="w_389" class="ocr_word" title="bbox 567 2462 707 2516" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 736 2479 808 2518" lang="grc">
