--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0221.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0221.html
@@ -72,9 +72,14 @@
             <ins class="alt" title="nlp 1.00">εἰσιν,</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 441 246 499 301" lang="grc">
+        <span id="w_11_0" class="ocr_word" title="bbox 441 246 499 301">
           <span class="alternatives">
-            <ins title="nlp 2.00"> &amp;#x003C;τὸ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;τὸ</ins>
+          </span>
+        </span>
+        <span id="w_11_1" class="ocr_word" title="bbox 441 246 499 301">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 532 249 573 287" lang="grc">
@@ -92,9 +97,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 886 247 1017 302" lang="grc">
+        <span id="w_15_0" class="ocr_word" title="bbox 886 247 1017 302">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἧττον&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">ἧττον&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_15_1" class="ocr_word" title="bbox 886 247 1017 302">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1062 263 1147 288" lang="grc">
@@ -115,16 +125,6 @@
         <span id="w_19" class="ocr_word" title="bbox 1544 268 1605 292" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1643 255 1748 292" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καλεῖ</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1783 267 1850 291" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
       </span>
@@ -680,9 +680,14 @@
             <ins class="alt" title="nlp 1.00">Πλάτωνα·</ins>
           </span>
         </span>
-        <span id="w_129" class="ocr_word" title="bbox 941 863 1056 918" lang="grc">
+        <span id="w_129_0" class="ocr_word" title="bbox 941 863 1056 918">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;κατὰ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;κατὰ</ins>
+          </span>
+        </span>
+        <span id="w_129_1" class="ocr_word" title="bbox 941 863 1056 918">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1087 880 1158 916" lang="grc">
@@ -690,24 +695,19 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1183 864 1390 919" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 1183 864 1390 919">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πλάτωνα&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Πλάτωνα&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_131_1" class="ocr_word" title="bbox 1183 864 1390 919">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1424 882 1542 906" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάντα</ins>
-          </span>
-        </span>
-        <span id="w_133" class="ocr_word" title="bbox 1572 882 1724 920" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔμμεσα</ins>
-          </span>
-        </span>
-        <span id="w_134" class="ocr_word" title="bbox 1746 867 1846 920" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λέγεται·</ins>
           </span>
         </span>
       </span>
