--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0169.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0169.html
@@ -1527,7 +1527,7 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 1674 1935 1844 1992" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;λέγων&amp;x003E;,</ins>
+            <ins title="nlp 2.00">x003E;,</ins>
           </span>
         </span>
       </span>
@@ -2694,9 +2694,14 @@
             <ins class="alt" title="nlp 1.00">συνὼν.</ins>
           </span>
         </span>
-        <span id="w_516" class="ocr_word" title="bbox 797 3086 917 3125" lang="grc">
+        <span id="w_516_0" class="ocr_word" title="bbox 797 3086 917 3125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνόν.</ins>
+            <ins class="alt" title="nlp 2.00">(σονόν.</ins>
+          </span>
+        </span>
+        <span id="w_516_1" class="ocr_word" title="bbox 797 3086 917 3125">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_517" class="ocr_word" title="bbox 944 3083 986 3126">
@@ -2754,12 +2759,6 @@
         <span id="w_527" class="ocr_word" title="bbox 1799 3079 1831 3112" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κ</ins>
-          </span>
-        </span>
-        <span id="w_528" class="ocr_word" title="bbox 1855 3079 1912 3120">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(cf.</ins>
-            <del title="nlp 0.90">(cf.</del>
           </span>
         </span>
       </span>
