--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0098.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0098.html
@@ -2100,7 +2100,7 @@
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1915 2615 1935 2648" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">7 οὐχ V</ins>
+            <ins title="nlp 2.00">οὐχ V</ins>
           </span>
         </span>
       </span>
@@ -2261,7 +2261,7 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 1019 2785 1054 2826">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.)</ins>
+            <ins title="nlp 2.00">l.)</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 1081 2786 1111 2819">
