--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0123.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0123.html
@@ -742,16 +742,11 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1753 1080 1884 1116" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μιμου-</ins>
+            <ins title="nlp 2.00">μιμουμένη</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 204 1123 1942 1187">
-        <span id="w_144" class="ocr_word" title="bbox 204 1123 297 1176" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένη</ins>
-          </span>
-        </span>
         <span id="w_145" class="ocr_word" title="bbox 329 1139 462 1178" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τέχνη,</ins>
@@ -802,23 +797,18 @@
             <ins class="alt" title="nlp 1.00">μόνῳ</ins>
           </span>
         </span>
-        <span id="w_155" class="ocr_word" title="bbox 1670 1148 1852 1187" lang="grc">
+        <span id="w_155_0" class="ocr_word" title="bbox 1670 1148 1852 1187">
           <span class="alternatives">
-            <ins title="nlp 2.00">παραχω-</ins>
+            <ins class="alt" title="nlp 2.00">παραχωροῦσιν·</ins>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 1878 1144 1942 1180">
+        <span id="w_155_1" class="ocr_word" title="bbox 1670 1148 1852 1187">
           <span class="alternatives">
-            <ins title="nlp 2.00">86ν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 203 1193 1883 1255">
-        <span id="w_157" class="ocr_word" title="bbox 203 1206 350 1245" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ποῦσιν· </ins>
-          </span>
-        </span>
         <span id="w_158" class="ocr_word" title="bbox 383 1193 409 1247" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἥ</ins>
@@ -1213,7 +1203,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1403 1610 1551 1665" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀμερῆ</ins>
+            <ins title="nlp 2.00">(ἀμερῆ</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1583 1611 1655 1666" lang="grc">
