--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0170.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0170.html
@@ -1865,9 +1865,9 @@
             <del title="nlp 0.90">scribas</del>
           </span>
         </span>
-        <span id="w_363" class="ocr_word" title="bbox 1868 2400 2149 2447" lang="grc">
+        <span id="w_363_0" class="ocr_word" title="bbox 1868 2400 2149 2447">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;κατακέχρηται&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;κατακέχρηται&gt;</ins>
           </span>
         </span>
       </span>
@@ -2769,7 +2769,7 @@
         </span>
         <span id="w_532" class="ocr_word" title="bbox 577 3111 733 3155" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;φωναῖς&amp;x003E;</ins>
+            <ins title="nlp 2.00">x003E;</ins>
           </span>
         </span>
         <span id="w_533" class="ocr_word" title="bbox 760 3110 823 3154" lang="grc">
